[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/CapturePoints/PowerUp1/PowerUp1Neutral.png" type="Texture" id=1]
[ext_resource path="res://Scripts/GameScripts/ContestPoint/ContestPointScript.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.2364, 6.59095 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.2301, 25.7506 )

[node name="ContestPoint" type="Node2D"]
script = ExtResource( 2 )

[node name="ContestPointBody" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContestPointBody"]
shape = SubResource( 1 )

[node name="ContestPointSprite" type="Sprite" parent="ContestPointBody"]
texture = ExtResource( 1 )

[node name="ContestPointArea" type="Area2D" parent="ContestPointBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ContestPointBody/ContestPointArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="ContestPointBody/ContestPointArea" to="." method="_on_ContestPointArea_body_entered"]
[connection signal="body_exited" from="ContestPointBody/ContestPointArea" to="." method="_on_ContestPointArea_body_exited"]
